# diffeq-runtime

./: .gitignore  CMakeLists.txt  README.md
src/: diffeq.c  diffeq.h  lib.c  lib.h  main.c
tests/: logistic_growth.c  logistic_growth_fixed_times_test.sh  logistic_growth_ode.c  logistic_growth_solver_times_test.sh  logistic_growth_test.sh  test_logistic.c  test_logistic_ode.c
